overdue -- MANY changes

--- a/algorithms.bib
+++ b/algorithms.bib
@@ -2,15 +2,59 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2013-12-04 15:03:55 -0600 
+%% Created for Jeff Erickson at 2017-09-27 20:56:23 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{bjm-flcpp-00,
+	Author = {Barrett, Chris and Jacob, Riko and Marathe, Madhav},
+	Date-Added = {2017-09-28 01:34:21 +0000},
+	Date-Modified = {2017-09-28 01:36:15 +0000},
+	Doi = {10.1137/S0097539798337716},
+	Journal = {SIAM J. Comput.},
+	Keywords = {CFG shortest paths in O(n^3 NP) time},
+	Number = {3},
+	Pages = {809--837},
+	Read = {1},
+	Title = {Formal-language-constrained path problems},
+	Volume = {30},
+	Year = {2000}}
+
+@article{c-sarsm-08,
+	Author = {Chaudhuri, Swarat},
+	Date-Added = {2017-09-27 15:00:58 +0000},
+	Date-Modified = {2017-09-27 15:04:11 +0000},
+	Doi = {10.1145/1328438.1328460},
+	Journal = {SIGPLAN Notices},
+	Note = {\emph{Proc. 35th Ann. ACM SIGPLAN-SIGACT Symp. Principles Prog. Lang.}},
+	Number = {1},
+	Pages = {159--169},
+	Read = {1},
+	Title = {Subcubic algorithms for recursive state machines},
+	Volume = {43},
+	Year = {2008},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1145/1328438.1328460}}
+
+@article{dek-spp-82,
+	Author = {Dolev, Danny and Even, Shimon and Karp, Richard M.},
+	Date-Added = {2017-09-27 14:51:28 +0000},
+	Date-Modified = {2017-09-27 14:53:12 +0000},
+	Doi = {10.1016/S0019-9958(82)90401-6},
+	Journal = {Inf. Control},
+	Keywords = {CFL reachability, CYK-Shimbel},
+	Number = {1--3},
+	Pages = {57--68},
+	Read = {1},
+	Title = {On the security of ping-ping protocols},
+	Volume = {55},
+	Year = {1982},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/S0019-9958(82)90401-6}}
+
 @inproceedings{y-pctum-77,
-	Author = {Andrew C. C. Yao},
+	Author = {Yao, Andrew C. C.},
 	Booktitle = {Proc. 18th Ann. Symp. Found. Comput. Sci.},
 	Date-Added = {2013-12-04 21:02:41 +0000},
 	Date-Modified = {2013-12-04 21:03:55 +0000},
@@ -19,7 +63,7 @@
 	Year = {1977}}
 
 @book{clrs-ia-09,
-	Author = {Thomas H. Cormen and Charles E. Leiserson and Ronald R. Rivest and Clifford Stein},
+	Author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald R. and Stein, Clifford},
 	Date-Added = {2012-09-24 02:30:58 +0000},
 	Date-Modified = {2012-09-24 02:38:14 +0000},
 	Publisher = {MIT Press},
@@ -28,10 +72,10 @@
 	Year = {2009}}
 
 @techreport{b-mnbo-95,
-	Author = {Phillip G. Bradford},
+	Author = {Bradford, Phillip G.},
 	Date-Added = {2012-09-21 04:14:23 +0000},
 	Date-Modified = {2012-09-21 04:21:23 +0000},
-	Institution = {Max-Planck-Institut f{\"u}r Informatik},
+	Institution = {Max-Planck-Institut für Informatik},
 	Number = {MPI-I-95-1-025},
 	Read = {1},
 	Title = {Matching nuts and bolts optimally},
@@ -41,7 +85,7 @@
 	Bdsk-Url-1 = {http://domino.mpi-inf.mpg.de/internet/reports.nsf/NumberView/1995-1-025}}
 
 @article{abf-mnbf-96,
-	Author = {Noga Alon and Phillip G. Bradford and Rudolf Fleischer},
+	Author = {Alon, Noga and Bradford, Phillip G. and Fleischer, Rudolf},
 	Comments = {O(n log^2 n) deterministic},
 	Date-Added = {2012-09-21 04:08:48 +0000},
 	Date-Modified = {2012-09-21 04:10:02 +0000},
@@ -54,12 +98,12 @@
 	Year = {1996}}
 
 @inproceedings{bf-mnbf-95,
-	Author = {Phillip G. Bradford and Rudolf Fleischer},
+	Author = {Bradford, Phillip G. and Fleischer, Rudolf},
 	Booktitle = {Proc. 6th. Int. Symp. Algorithms Comput.},
 	Comments = {O(n log^2 n) deterministic},
 	Date-Added = {2012-09-21 04:05:35 +0000},
 	Date-Modified = {2012-09-21 04:09:57 +0000},
-	Editor = {John Staples and Peter Eades and Naoki Katoh and Alistair Moffat},
+	Editor = {Staples, John and Eades, Peter and Katoh, Naoki and Moffat, Alistair},
 	Number = {1004},
 	Pages = {402--408},
 	Read = {1},
@@ -68,7 +112,7 @@
 	Year = {1995}}
 
 @inproceedings{abfkno-mnb-94,
-	Author = {Noga Alon and Manuel Blum and Amos Fiat and Sampath Kannan and Moni Noar and Rafail Ostrovsky},
+	Author = {Alon, Noga and Blum, Manuel and Fiat, Amos and Kannan, Sampath and Noar, Moni and Ostrovsky, Rafail},
 	Booktitle = {Proc. 5th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Comments = {O(n log^4 n) determinstic},
 	Date-Added = {2012-09-21 04:01:04 +0000},
@@ -79,7 +123,7 @@
 	Year = {1994}}
 
 @book{r-cwiaa-92,
-	Author = {Gregory J. E. Rawlins},
+	Author = {Rawlins, Gregory J. E.},
 	Date-Added = {2012-09-21 03:56:45 +0000},
 	Date-Modified = {2012-09-21 04:03:15 +0000},
 	Keywords = {Nuts and bolts},
@@ -89,7 +133,7 @@
 	Year = {1992}}
 
 @article{js-mnbot-98,
-	Author = {J{\'a}nos Koml{\'o}s and Yuan Ma and Endre Szemer{\'e}di},
+	Author = {Komlós, János and Ma, Yuan and Szemerédi, Endre},
 	Date-Added = {2012-09-21 03:50:37 +0000},
 	Date-Modified = {2012-09-21 04:01:06 +0000},
 	Journal = {SIAM J. Discrete Math.},
