--- a/compgeom.bib
+++ b/compgeom.bib
@@ -2,12 +2,69 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2014-07-20 10:25:11 -0500 
+%% Created for Jeff Erickson at 2017-10-15 11:27:55 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{dg-cop3d-97,
+	Author = {Das, Gautam and Goodrich, Michael T.},
+	Date-Added = {2017-10-15 16:26:47 +0000},
+	Date-Modified = {2017-10-15 16:27:52 +0000},
+	Doi = {10.1016/S0925-7721(97)00006-0},
+	Journal = {Comput. Geom. Theory Appl.},
+	Number = {3},
+	Pages = {123--137},
+	Read = {1},
+	Title = {On the complexity of optimization problems for 3-dimensional convex polyhedra and decisiosn trees},
+	Volume = {8},
+	Year = {1997}}
+
+@article{g-pmcbh-60,
+	Author = {Grünbaum, Branko},
+	Comments = {Claims Theorem 2 independently proved by Preston C. Hammer, whose proof was apparently never published},
+	Date-Added = {2017-08-10 19:51:23 +0000},
+	Date-Modified = {2017-08-10 20:12:17 +0000},
+	Doi = {10.2140/pjm.1960.10.1257},
+	Journal = {Pacific J. Math.},
+	Keywords = {any halfspace containing the centroid of convex body B contains at least 1/e of B's volume},
+	Number = {4},
+	Pages = {1257--1261},
+	Title = {Partitions of mass-distributions and convex bodies by hyperplanes},
+	Volume = {10},
+	Year = {1960},
+	Bdsk-Url-1 = {http://dx.doi.org/10.2140/pjm.1960.10.1257}}
+
+@article{m-lpltw-84,
+	Author = {Megiddo, Nimrod},
+	Date-Added = {2017-08-10 16:49:16 +0000},
+	Date-Modified = {2017-08-10 16:50:37 +0000},
+	Doi = {10.1145/2422.322418},
+	Journal = {J. Assoc. Comput. Machinery},
+	Keywords = {design of algorithms, linear programming, worst-case analysis, prune-and-search},
+	Number = {1},
+	Pages = {114--127},
+	Title = {Linear programming in linear time when the dimension is fixed},
+	Volume = {31},
+	Year = {1984},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1145/2422.322418}}
+
+@article{is-scpzs-90,
+	Author = {Iwano, Kazuo and Steiglitz, Kenneth},
+	Comments = {zero-sum cycles for 2d-weighted graphs via Kleene's algorithm},
+	Date-Added = {2017-08-08 16:37:02 +0000},
+	Date-Modified = {2017-08-08 16:42:36 +0000},
+	Doi = {10.1137/0219061},
+	Journal = {SIAM J. Comput.},
+	Number = {5},
+	Pages = {883--901},
+	Read = {1},
+	Title = {A semiring on convex polygons and zero-sum cycle problems},
+	Volume = {19},
+	Year = {1990},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1137/0219061}}
 
 @article{ce-oails-92,
 	Author = {Chazelle, Bernard and Edelsbrunner, Herbert},
@@ -42,7 +99,7 @@
 	Year = {1989}}
 
 @article{aghtu-acgg-08,
-	Author = {Manuel Abellanas and Alfredo Garc{\'\i}a and Ferran Hurtado and Javier Tejel and Jorge Urrutia},
+	Author = {Abellanas, Manuel and García, Alfredo and Hurtado, Ferran and Tejel, Javier and Urrutia, Jorge},
 	Comments = {weakly simple = non-self-crossing (no definition of latter)},
 	Date-Added = {2014-07-20 15:23:40 +0000},
 	Date-Modified = {2014-07-20 15:25:05 +0000},
@@ -64,7 +121,7 @@
   present lower and upper bounds such that any given graph
   $G(S) \in \mathcal{C}$ admits a compatible (perfect)
   matching with this many disjoint edges.},
-	Author = {Oswin Aichholzer and Ferran Hurtado and Birgit Vogtenhuber},
+	Author = {Aichholzer, Oswin and Hurtado, Ferran and Vogtenhuber, Birgit},
 	Booktitle = {Proc. 28th European Workshop Comput. Geom.},
 	Comments = {http://www.ist.tugraz.at/files/publications/geometry/ahv-cmbps-12.pdf},
 	Date-Added = {2014-07-20 15:23:40 +0000},
@@ -75,7 +132,7 @@
 	Year = {2012}}
 
 @mastersthesis{a-npntd-13,
-	Author = {Patrice Arruda},
+	Author = {Arruda, Patrice},
 	Date-Added = {2014-07-20 15:23:40 +0000},
 	Date-Modified = {2014-07-20 15:25:01 +0000},
 	Read = {1},
@@ -86,7 +143,7 @@
 	Bdsk-Url-1 = {http://www.scs.carleton.ca/content/new-polygon-nesting-trees-data-structure-construct-physical-polyhedral-object}}
 
 @article{bm-corgg-04,
-	Author = {Prosenjit Bose and Pat Morin},
+	Author = {Bose, Prosenjit and Morin, Pat},
 	Date-Added = {2014-07-20 15:23:40 +0000},
 	Date-Modified = {2014-07-20 15:24:56 +0000},
 	Journal = {Theoretical Computer Science},
@@ -119,7 +176,7 @@
 	Year = {2010}}
 
 @book{do-gfalo-07,
-	Author = {Erik D. Demaine and Joseph O'Rourke},
+	Author = {Demaine, Erik D. and O'Rourke, Joseph},
 	Date-Added = {2014-07-20 15:23:40 +0000},
 	Date-Modified = {2014-07-20 15:24:51 +0000},
 	Publisher = {Cambridge Univ. Press},
@@ -140,7 +197,7 @@
 	Year = {2009}}
 
 @article{ist-dcgm-13,
-	Author = {Ishaque, Mashhood and Souvaine, Diane L. and T{\'o}th, Csaba D.},
+	Author = {Ishaque, Mashhood and Souvaine, Diane L. and Tóth, Csaba D.},
 	Date-Added = {2014-07-20 15:23:40 +0000},
 	Date-Modified = {2014-07-20 15:23:40 +0000},
 	Journal = {Discrete and Computational Geometry},
@@ -151,7 +208,7 @@
 	Year = {2013}}
 
 @book{mn-lpcgc-99,
-	Author = {Kurt Mehlhorn and Stefan N{\"a}her},
+	Author = {Mehlhorn, Kurt and Näher, Stefan},
 	Date-Added = {2014-07-20 15:23:40 +0000},
 	Date-Modified = {2014-07-20 15:23:40 +0000},
 	Publisher = {Cambridge Univ. Press},
@@ -159,7 +216,7 @@
 	Year = {1999}}
 
 @article{rw-acpgg-12,
-	Author = {{Ignaz} {Rutter} and {Alexander} {Wolff}},
+	Author = {{Rutter}, {Ignaz} and {Wolff}, {Alexander}},
 	Date-Added = {2014-07-20 15:23:40 +0000},
 	Date-Modified = {2014-07-20 15:23:40 +0000},
 	Journal = {J. Graph Algorithms Appl.},
@@ -181,7 +238,7 @@
 	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Simple_polygon}}
 
 @inproceedings{sh-gip-76,
-	Author = {Michael I. Shamos and Dan Hoey},
+	Author = {Shamos, Michael I. and Hoey, Dan},
 	Booktitle = {Proc. 17th Annu. IEEE Sympos. Found. Comput. Sci.},
 	Date-Added = {2014-07-20 15:14:05 +0000},
 	Date-Modified = {2014-07-20 15:14:08 +0000},
@@ -191,7 +248,7 @@
 	Year = {1976}}
 
 @article{ksn-spppo-99,
-	Author = {Yoshiyuki Kusakari and Hitoshi Suzuki and Takao Nishizeki},
+	Author = {Kusakari, Yoshiyuki and Suzuki, Hitoshi and Nishizeki, Takao},
 	Comments = {Defines "crossing" correctly for non-simple paths without spurs},
 	Date-Added = {2014-07-20 15:13:47 +0000},
 	Date-Modified = {2014-07-20 15:13:51 +0000},
@@ -204,7 +261,7 @@
 	Year = {1999}}
 
 @inproceedings{ht-pcbet-05,
-	Author = {Michael Hoffmann and Csaba D. T{\'o}th},
+	Author = {Hoffmann, Michael and Tóth, Csaba D.},
 	Booktitle = {Proc. 21st Ann. Symp. Comput. Geom.},
 	Comments = {weakly simple = non-self-crossing (no definition of latter)},
 	Date-Added = {2014-07-20 15:13:30 +0000},
@@ -215,7 +272,7 @@
 	Year = {2005}}
 
 @article{r-nsaq2-95,
-	Author = {Jim Ruppert},
+	Author = {Ruppert, Jim},
 	Date-Added = {2014-07-20 15:13:06 +0000},
 	Date-Modified = {2014-07-20 15:14:19 +0000},
 	Journal = {J. Algorithms},
@@ -227,11 +284,11 @@
 	Year = {1995}}
 
 @inproceedings{bcdt-cordg-14,
-	Author = {Prosenjit Bose and Jean-Lou De Carufel and Stephane Durocher and Perouz Taslakian},
+	Author = {Bose, Prosenjit and Carufel, Jean-Lou De and Durocher, Stephane and Taslakian, Perouz},
 	Booktitle = {Proc. 14th Scand. Workshop Algorithm Theory},
 	Date-Added = {2014-07-20 15:12:55 +0000},
 	Date-Modified = {2014-07-20 15:14:27 +0000},
-	Editor = {R. Ravi and and Inge Li G{\o}rtz},
+	Editor = {Ravi, R. and and Inge Li Gørtz},
 	Pages = {98--104},
 	Publisher = {Springer},
 	Read = {1},
@@ -241,7 +298,7 @@
 	Year = {2014}}
 
 @article{ylw-spnprp-97,
-	Author = {Chung-Do Yang and Der-Tsai Lee and Chak-Kuen Wong},
+	Author = {Yang, Chung-Do and Lee, Der-Tsai and Wong, Chak-Kuen},
 	Comments = {definition of crossing assumes simple paths},
 	Date-Added = {2014-06-26 12:13:26 +0000},
 	Date-Modified = {2014-06-26 12:17:39 +0000},
@@ -254,7 +311,7 @@
 	Year = {1997}}
 
 @article{addjs-sswg-93,
-	Author = {Ingo Alth{\"o}fer and Gautam Das and David P. Dobkin and Deborah Joseph and Jos{\'e} Soares},
+	Author = {Althöfer, Ingo and Das, Gautam and Dobkin, David P. and Joseph, Deborah and Soares, José},
 	Date-Added = {2013-11-08 20:52:08 +0000},
 	Date-Modified = {2014-07-20 15:14:34 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -265,7 +322,7 @@
 	Year = {1993}}
 
 @inproceedings{bgh-dsmd-97,
-	Author = {Julien Basch and Leonidas J. Guibas and John Hershberger},
+	Author = {Basch, Julien and Guibas, Leonidas J. and Hershberger, John},
 	Booktitle = {Proc. 8th ACM-SIAM Sympos. Discrete Algorithms},
 	Date-Added = {2013-11-08 19:54:30 +0000},
 	Date-Modified = {2013-11-08 19:55:06 +0000},
@@ -277,11 +334,11 @@
 
 @incollection{g-kdssa-98,
 	Address = {Wellesley, MA},
-	Author = {Leonidas J. Guibas},
+	Author = {Guibas, Leonidas J.},
 	Booktitle = {Proc. Workshop Algorithmic Found. Robot.},
 	Date-Added = {2013-11-08 19:53:46 +0000},
 	Date-Modified = {2013-11-08 19:55:05 +0000},
-	Editor = {Pankaj K. Agarwal and Lydia E. Kavraki and Matthew T. Mason},
+	Editor = {Agarwal, Pankaj K. and Kavraki, Lydia E. and Mason, Matthew T.},
 	Pages = {191--209},
 	Publisher = {A. K. Peters},
 	Read = {1},
@@ -290,7 +347,7 @@
 	Year = {1998}}
 
 @article{m-gsaps2-99,
-	Author = {Joseph S. B. Mitchell},
+	Author = {Mitchell, Joseph S. B.},
 	Date-Added = {2013-11-08 06:33:37 +0000},
 	Date-Modified = {2013-11-08 06:35:16 +0000},
 	Journal = {SIAM J. Computing},
@@ -301,7 +358,7 @@
 	Year = {1999}}
 
 @book{g-cp-67,
-	Author = {Branko Gr{\"u}nbaum},
+	Author = {Grünbaum, Branko},
 	Date-Added = {2013-10-29 04:14:03 +0000},
 	Date-Modified = {2013-10-29 04:18:18 +0000},
 	Number = {XVI},
@@ -311,11 +368,11 @@
 	Year = {1967}}
 
 @incollection{r-gbp-99,
-	Author = {Victor Reiner},
+	Author = {Reiner, Victor},
 	Booktitle = {New Perspectives in Geometric Combinatorics},
 	Date-Added = {2013-08-02 16:31:38 +0000},
 	Date-Modified = {2013-08-02 16:38:15 +0000},
-	Editor = {Louis J. Billera and Anders Bj{\"o}rner and Curtis Greene and Rodica E. Simion and Richard P. Stanley},
+	Editor = {Billera, Louis J. and Björner, Anders and Greene, Curtis and Simion, Rodica E. and Stanley, Richard P.},
 	Pages = {293--336},
 	Publisher = {MSRI Publications},
 	Read = {1},
@@ -324,7 +381,7 @@
 	Year = {1999}}
 
 @article{bs-fp-92,
-	Author = {Louis J. Billera and Bernd Sturmfels},
+	Author = {Billera, Louis J. and Sturmfels, Bernd},
 	Comments = {cube flips (implicit)},
 	Date-Added = {2013-08-02 15:43:02 +0000},
 	Date-Modified = {2013-08-02 16:22:40 +0000},
@@ -337,7 +394,7 @@
 	Year = {1992}}
 
 @article{cg-vippg-89,
-	Author = {Bernard Chazelle and Leonidas J. Guibas},
+	Author = {Chazelle, Bernard and Guibas, Leonidas J.},
 	Date-Added = {2013-03-12 21:08:52 +0000},
 	Date-Modified = {2013-03-12 21:09:29 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -348,7 +405,7 @@
 	Year = {1989}}
 
 @article{ghls-ltavs-87,
-	Author = {Leonidas J. Guibas and John Hershberger and Daniel Leven and Micha Sharir and Robert E. Tarjan},
+	Author = {Guibas, Leonidas J. and Hershberger, John and Leven, Daniel and Sharir, Micha and Tarjan, Robert E.},
 	Date-Added = {2013-03-12 18:56:13 +0000},
 	Date-Modified = {2013-03-12 18:57:06 +0000},
 	Journal = {Algorithmica},
@@ -361,7 +418,7 @@
 	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF01840360}}
 
 @article{gh-ospqs-89,
-	Author = {Leonidas J. Guibas and John Hershberger},
+	Author = {Guibas, Leonidas J. and Hershberger, John},
 	Date-Added = {2013-03-12 18:53:32 +0000},
 	Date-Modified = {2013-03-12 18:53:58 +0000},
 	Journal = {J. Comput. Syst. Sci.},
@@ -373,7 +430,7 @@
 	Year = {1989}}
 
 @article{eghsssw-irals-89,
-	Author = {Herbert Edelsbrunner and Leonidas Guibas and John Hershberger and Raimund Seidel and Micha Sharir and Jack Snoeyink and Emo Welzl},
+	Author = {Edelsbrunner, Herbert and Guibas, Leonidas and Hershberger, John and Seidel, Raimund and Sharir, Micha and Snoeyink, Jack and Welzl, Emo},
 	Date-Added = {2013-02-09 14:38:07 +0000},
 	Date-Modified = {2013-02-09 14:39:25 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -386,7 +443,7 @@
 	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF02187742}}
 
 @article{m-rsehc-93,
-	Author = {Ji{\v r}{\'\i} Matou{\v s}ek},
+	Author = {Matoušek, Jiří},
 	Date-Added = {2013-02-08 22:35:07 +0000},
 	Date-Modified = {2014-07-20 15:14:15 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -398,7 +455,7 @@
 	Year = {1993}}
 
 @article{m-ept-92,
-	Author = {Ji{\v r}{\'\i} Matou{\v s}ek},
+	Author = {Matoušek, Jiří},
 	Date-Added = {2013-02-08 22:03:51 +0000},
 	Date-Modified = {2013-02-08 22:04:16 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -409,7 +466,7 @@
 	Year = {1992}}
 
 @article{as-anspt-93,
-	Author = {Pankaj K. Agarwal and Micha Sharir},
+	Author = {Agarwal, Pankaj K. and Sharir, Micha},
 	Date-Added = {2013-02-08 21:09:54 +0000},
 	Date-Modified = {2013-02-08 21:10:29 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -421,7 +478,7 @@
 	Year = {1993}}
 
 @techreport{m-mcast-90,
-	Author = {Ji{\v r}{\'\i} Matou{\v s}ek},
+	Author = {Matoušek, Jiří},
 	Date-Added = {2013-02-08 20:50:48 +0000},
 	Date-Modified = {2013-02-08 21:04:37 +0000},
 	Institution = {Freie Univ. Berlin},
@@ -433,7 +490,7 @@
 	Year = {1990}}
 
 @article{a-soast-92,
-	Author = {Pankaj K. Agarwal},
+	Author = {Agarwal, Pankaj K.},
 	Date-Added = {2013-02-08 20:31:40 +0000},
 	Date-Modified = {2013-02-08 20:53:23 +0000},
 	Journal = {SIAM J. Comput.},
@@ -445,10 +502,10 @@
 	Year = {1992}}
 
 @article{m-stwcn-91,
-	Author = {Ji{\v r}{\'\i} Matou{\v s}ek},
+	Author = {Matoušek, Jiří},
 	Date-Added = {2013-02-08 20:27:09 +0000},
 	Date-Modified = {2013-02-08 20:51:34 +0000},
-	Journal = {RAIRO Inform. Th{\'e}or. Appl.},
+	Journal = {RAIRO Inform. Théor. Appl.},
 	Number = {2},
 	Pages = {103--123},
 	Read = {1},
@@ -457,11 +514,11 @@
 	Year = {1991}}
 
 @incollection{w-stlcn-92,
-	Author = {Emo Welzl},
+	Author = {Welzl, Emo},
 	Booktitle = {Data Structures and Efficient Algorithms: {Final} Report on the {DFG} Special Joint Initiative},
 	Date-Added = {2013-02-08 20:14:52 +0000},
 	Date-Modified = {2013-02-08 20:51:19 +0000},
-	Editor = {Burkhard Monien and Thomas Ottmann},
+	Editor = {Monien, Burkhard and Ottmann, Thomas},
 	Pages = {233--249},
 	Publisher = {Springer},
 	Read = {1},
@@ -472,7 +529,7 @@
 	Bdsk-Url-1 = {http://dx.doi.org/10.1007/3-540-55488-2_30}}
 
 @article{cw-qrssf-89,
-	Author = {Bernard Chazelle and Emo Welzl},
+	Author = {Chazelle, Bernard and Welzl, Emo},
 	Date-Added = {2013-02-08 20:12:17 +0000},
 	Date-Modified = {2013-02-08 20:52:12 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -484,7 +541,7 @@
 	Year = {1989}}
 
 @article{cp-cioor-10,
-	Author = {Timothy M. Chan and Mihai P{\u a}tra{\c s}cu},
+	Author = {Chan, Timothy M. and Pătraşcu, Mihai},
 	Comments = {orthogonal emptiness (via dominance counting): O(n \sqrt{\log n}) space, O(log n/log log n) query time},
 	Date-Added = {2013-01-30 01:45:54 +0000},
 	Date-Modified = {2013-02-08 20:52:17 +0000},
@@ -495,7 +552,7 @@
 	Year = {2010}}
 
 @article{cbk-sn-05,
-	Author = {Sergio Cabello and Mark de Berg and Marc van Kreveld},
+	Author = {Cabello, Sergio and de Berg, Mark and van Kreveld, Marc},
 	Date-Added = {2013-01-29 23:01:05 +0000},
 	Date-Modified = {2013-02-08 20:52:50 +0000},
 	Journal = {Comput. Geom. Theory Appl.},
@@ -506,7 +563,7 @@
 	Year = {2005}}
 
 @article{k-osps-83,
-	Author = {David G. Kirkpatrick},
+	Author = {Kirkpatrick, David G.},
 	Date-Added = {2013-01-27 05:09:52 +0000},
 	Date-Modified = {2013-02-08 20:51:39 +0000},
 	Journal = {SIAM J. Comput.},
@@ -519,7 +576,7 @@
 	Year = {1983}}
 
 @article{gjpt-tsp-78,
-	Author = {Michael R. Garey and David S. Johnson and Franco P. Preparata and Robert E. Tarjan},
+	Author = {Garey, Michael R. and Johnson, David S. and Preparata, Franco P. and Tarjan, Robert E.},
 	Comments = {trapezoids in O(n log n) time + triangles in O(n) more time},
 	Date-Added = {2013-01-19 02:48:28 +0000},
 	Date-Modified = {2013-02-08 20:51:50 +0000},
@@ -531,7 +588,7 @@
 	Year = {1978}}
 
 @book{o-cg-98,
-	Author = {Joseph O'Rourke},
+	Author = {O'Rourke, Joseph},
 	Date-Added = {2013-01-19 02:42:38 +0000},
 	Date-Modified = {2013-02-08 20:51:32 +0000},
 	Edition = {2nd},
@@ -541,7 +598,7 @@
 	Year = {1998}}
 
 @book{bcko-cgaa-08,
-	Author = {Mark de Berg and Otfried Cheong and Marc van Kreveld and Mark Overmars},
+	Author = {de Berg, Mark and Cheong, Otfried and van Kreveld, Marc and Overmars, Mark},
 	Date-Added = {2013-01-19 02:41:44 +0000},
 	Date-Modified = {2013-01-19 02:41:44 +0000},
 	Edition = {3rd},
@@ -552,7 +609,7 @@
 	Year = {2008}}
 
 @article{t-etsp-91,
-	Author = {Godfried Toussaint},
+	Author = {Toussaint, Godfried},
 	Comments = {incorrect proofs of polygon triangulability},
 	Date-Added = {2013-01-18 22:55:47 +0000},
 	Date-Modified = {2013-02-08 20:51:21 +0000},
@@ -565,7 +622,7 @@
 	Year = {1991}}
 
 @article{h-dpit-76,
-	Author = {Chung-Wo Hu},
+	Author = {Hu, Chung-Wo},
 	Comments = {incorrect proofs of polygon triangulability},
 	Date-Added = {2013-01-18 22:50:29 +0000},
 	Date-Modified = {2013-02-08 20:51:43 +0000},
@@ -577,7 +634,7 @@
 	Year = {1976}}
 
 @inproceedings{b-ct-93,
-	Author = {Marshall Bern},
+	Author = {Bern, Marshall},
 	Booktitle = {Proc. 9th Ann. Symp. Comput. Geom.},
 	Date-Added = {2012-12-02 06:25:30 +0000},
 	Date-Modified = {2012-12-02 06:29:37 +0000},
@@ -587,7 +644,7 @@
 	Year = {1993}}
 
 @article{c-cpplb-84,
-	Author = {Bernard Chazelle},
+	Author = {Chazelle, Bernard},
 	Date-Added = {2012-12-02 06:19:53 +0000},
 	Date-Modified = {2012-12-02 06:20:47 +0000},
 	Journal = {SIAM J. Comput.},
@@ -599,7 +656,7 @@
 	Year = {1984}}
 
 @article{cp-tnp-90,
-	Author = {Bernard Chazelle and Leonidas Palios},
+	Author = {Chazelle, Bernard and Palios, Leonidas},
 	Date-Added = {2012-12-02 06:13:39 +0000},
 	Date-Modified = {2012-12-02 06:15:05 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -610,7 +667,7 @@
 	Year = {1990}}
 
 @inproceedings{ag-mrpc-92,
-	Author = {Helmut Alt and Michael Godau},
+	Author = {Alt, Helmut and Godau, Michael},
 	Booktitle = {Proc. 8th Ann. Symp. Comput. Geom.},
 	Date-Added = {2012-11-01 21:10:08 +0000},
 	Date-Modified = {2013-02-08 20:53:22 +0000},
@@ -620,19 +677,19 @@
 	Year = {1992}}
 
 @article{ag-cfdbt-95,
-	Author = {Helmut Alt and Michael Godau},
+	Author = {Alt, Helmut and Godau, Michael},
 	Date-Added = {2012-11-01 21:10:08 +0000},
 	Date-Modified = {2013-02-08 20:53:20 +0000},
 	Journal = {Int. J. Comput. Geom. Appl.},
-	Keywords = {Fr{\'e}chet distance, shape analysis, resemblance of curves, computational morphology},
+	Keywords = {Fréchet distance, shape analysis, resemblance of curves, computational morphology},
 	Pages = {75--91},
 	Read = {1},
-	Title = {Computing the {Fr{\'e}chet} distance between two polygonal curves},
+	Title = {Computing the {Fréchet} distance between two polygonal curves},
 	Volume = {5},
 	Year = {1995}}
 
 @techreport{st-csp-92,
-	Author = {Thomas Shermer and Godfried Toussaint},
+	Author = {Shermer, Thomas and Toussaint, Godfried},
 	Date-Added = {2012-09-19 05:40:27 +0000},
 	Date-Modified = {2013-02-08 20:51:22 +0000},
 	Institution = {School of Computing Science, Simon Fraser University},
@@ -646,7 +703,7 @@
 	Bdsk-Url-1 = {ftp://fas.sfu.ca/pub/cs/TR/1992/CMPT92-11.ps.gz}}
 
 @article{t-cgpis-89,
-	Author = {Godfried T. Toussaint},
+	Author = {Toussaint, Godfried T.},
 	Date-Added = {2012-09-14 21:21:20 +0000},
 	Date-Modified = {2013-02-08 20:51:21 +0000},
 	Journal = {Revue d'Intelligence Artificielle},
@@ -659,7 +716,7 @@
 	Year = {1989}}
 
 @article{t-sspst-89,
-	Author = {Godfried T. Toussaint},
+	Author = {Toussaint, Godfried T.},
 	Date-Added = {2012-09-14 18:12:49 +0000},
 	Date-Modified = {2014-03-31 20:27:18 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -672,7 +729,7 @@
 	Year = {1989}}
 
 @book{ps-cgi-85,
-	Author = {Franco P. Preparata and Michael I. Shamos},
+	Author = {Preparata, Franco P. and Shamos, Michael I.},
 	Date-Added = {2012-06-25 20:59:03 +0000},
 	Date-Modified = {2012-06-25 21:04:30 +0000},
 	Publisher = {Springer-Verlag},
@@ -682,12 +739,12 @@
 	Year = {1985}}
 
 @incollection{m-gspno-00,
-	Author = {Joseph Mitchell},
+	Author = {Mitchell, Joseph},
 	Booktitle = {The Handbook of Computational Geometry},
 	Chapter = {15},
 	Date-Added = {2012-06-24 00:24:11 +0000},
 	Date-Modified = {2013-02-08 20:51:34 +0000},
-	Editor = {J{\"o}rg-R{\"u}diger Sack and Jorge Urrutia},
+	Editor = {Sack, Jörg-Rüdiger and Urrutia, Jorge},
 	Pages = {633--701},
 	Publisher = {Elsevier Science},
 	Read = {1},
@@ -697,7 +754,7 @@
 	Bdsk-Url-1 = {http://www.ams.sunysb.edu/~jsbm/papers/survey.ps.gz}}
 
 @article{bmsw-sgps-11,
-	Author = {Prosenjot Bose and Anil Maheshwari and Chang Shu and Stefanie Wuhrer},
+	Author = {Bose, Prosenjot and Maheshwari, Anil and Shu, Chang and Wuhrer, Stefanie},
 	Date-Added = {2012-06-24 00:21:54 +0000},
 	Date-Modified = {2012-06-24 00:23:48 +0000},
 	Journal = {Comput. Geom. Theory Appl.},
@@ -708,7 +765,7 @@
 	Year = {2011}}
 
 @article{m-ssps-87,
-	Author = {David M. Mount},
+	Author = {Mount, David M.},
 	Date-Added = {2012-06-23 23:38:49 +0000},
 	Date-Modified = {2012-06-23 23:45:27 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -719,7 +776,7 @@
 	Year = {1987}}
 
 @article{ss-oaspc-08,
-	Author = {Yevgeny Schreiber and Micha Sharir},
+	Author = {Schreiber, Yevgeny and Sharir, Micha},
 	Date-Added = {2012-06-19 22:47:44 +0000},
 	Date-Modified = {2012-06-19 22:48:25 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -731,7 +788,7 @@
 	Year = {2008}}
 
 @article{s-oaspr-10,
-	Author = {Yevgeny Schreiber},
+	Author = {Schreiber, Yevgeny},
 	Date-Added = {2012-06-19 22:47:07 +0000},
 	Date-Modified = {2012-06-19 22:48:28 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -743,7 +800,7 @@
 	Year = {2010}}
 
 @article{s-antps-09,
-	Author = {Shubhangi Saraf},
+	Author = {Saraf, Shubhangi},
 	Date-Added = {2012-05-15 19:35:47 +0000},
 	Date-Modified = {2012-05-15 19:40:08 +0000},
 	Journal = {European J. Combin.},
@@ -755,7 +812,7 @@
 	Year = {2009}}
 
 @article{cs-bst-95,
-	Author = {Bernard Chazelle and Nadia Shouraboura},
+	Author = {Chazelle, Bernard and Shouraboura, Nadia},
 	Date-Added = {2012-01-03 14:40:46 +0000},
 	Date-Modified = {2013-02-08 20:52:12 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -766,7 +823,7 @@
 	Year = {1995}}
 
 @article{sg-itfges-84,
-	Author = {Marjorie Senechal and Ravil Vagizovich Galiulin},
+	Author = {Senechal, Marjorie and Galiulin, Ravil Vagizovich},
 	Date-Added = {2011-12-27 18:19:49 +0000},
 	Date-Modified = {2013-02-08 20:51:22 +0000},
 	Journal = {Structural Topology},
@@ -777,7 +834,7 @@
 	Year = {1984}}
 
 @article{f-eg-1893,
-	Author = {Evgraf Stepanovich Fedorov},
+	Author = {Fedorov, Evgraf Stepanovich},
 	Date-Added = {2011-12-27 14:51:57 +0000},
 	Date-Modified = {2011-12-27 14:54:25 +0000},
 	Journal = {Z. Krystalographie und Mineralogolgie},
@@ -787,18 +844,18 @@
 	Year = {1893}}
 
 @article{f-nuf-1885,
-	Author = {Evgraf Stepanovich Fedorov},
+	Author = {Fedorov, Evgraf Stepanovich},
 	Date-Added = {2011-12-27 14:50:37 +0000},
 	Date-Modified = {2011-12-27 23:50:17 +0000},
 	Journal = {Notices Imp. Petersburg Mineralog. Soc.},
 	Note = {In Russian. Cited in \cite{sg-itfges-84}},
 	Pages = {1--279},
-	Title = {Na{\v c}ala U{\v c}eniya o Figurah [{Elements} of the study of figures]},
+	Title = {Načala Učeniya o Figurah [{Elements} of the study of figures]},
 	Volume = {24},
 	Year = {1885}}
 
 @incollection{c-czmpd-99,
-	Author = {Harold S. M. Coxeter},
+	Author = {Coxeter, Harold S. M.},
 	Booktitle = {Twelve Geometric Essays},
 	Chapter = {4},
 	Date-Added = {2011-12-27 14:47:49 +0000},
@@ -810,7 +867,7 @@
 	Year = {1999}}
 
 @article{c-czmpd-62,
-	Author = {Harold S. M. Coxeter},
+	Author = {Coxeter, Harold S. M.},
 	Date-Added = {2011-12-27 14:38:29 +0000},
 	Date-Modified = {2011-12-27 14:49:04 +0000},
 	Journal = {J. Math. Pures Appl.},
@@ -822,7 +879,7 @@
 	Year = {1962}}
 
 @article{t-zgz-92,
-	Author = {Jean E. Taylor},
+	Author = {Taylor, Jean E.},
 	Date-Added = {2011-12-27 14:36:30 +0000},
 	Date-Modified = {2011-12-27 14:36:59 +0000},
 	Journal = {Amer. Math. Monthly},
@@ -834,7 +891,7 @@
 	Year = {1992}}
 
 @book{g-as-72,
-	Author = {Branko Gr{\"u}nbaum},
+	Author = {Grünbaum, Branko},
 	Date-Added = {2011-12-27 14:34:42 +0000},
 	Date-Modified = {2013-02-08 20:51:45 +0000},
 	Number = {10},
@@ -847,7 +904,7 @@
 @article{ph-chfsp-77,
 	Annote = {Claims $O(n \log n)$ time, but actually takes $O(n^2)$
 		 time in special cases [d-iafch-90]},
-	Author = {Franco P. Preparata and S. J. Hong},
+	Author = {Preparata, Franco P. and Hong, S. J.},
 	Date-Added = {2011-11-11 19:14:54 +0000},
 	Date-Modified = {2013-02-08 20:51:32 +0000},
 	Journal = {Commun. ACM},
@@ -860,7 +917,7 @@
 
 @booklet{e-icad-83,
 	Address = {Carnegie-Mellon University},
-	Author = {Charles M. Eastman},
+	Author = {Eastman, Charles M.},
 	Date-Added = {2011-11-11 14:18:03 +0000},
 	Date-Modified = {2013-02-08 20:52:02 +0000},
 	Howpublished = {Course Notes},
@@ -869,11 +926,11 @@
 	Year = {1982}}
 
 @inproceedings{bfh-mg-95,
-	Author = {Heinzgerd Bendels and Dieter W. Fellner and Sven Havemann},
-	Booktitle = {Modeling - Virtual Worlds - Distributed Graphics: Beitr{\"a}ge zum Internationalen Workshop MVD'95},
+	Author = {Bendels, Heinzgerd and Fellner, Dieter W. and Havemann, Sven},
+	Booktitle = {Modeling - Virtual Worlds - Distributed Graphics: Beiträge zum Internationalen Workshop MVD'95},
 	Date-Added = {2011-11-11 14:07:29 +0000},
 	Date-Modified = {2011-11-11 14:11:37 +0000},
-	Editor = {Dieter W. Fellner},
+	Editor = {Fellner, Dieter W.},
 	Pages = {149--157},
 	Publisher = {Infix},
 	Title = {Modellierung der {Grundlagen}: {Erweiterbare} {Datenstrukturen} zur {Modellierung} und {Visualisierung} polygonaler {Welten}},
@@ -881,7 +938,7 @@
 
 @book{m-ism-88,
 	Address = {Rockville, MD},
-	Author = {Martti M{\"a}ntyl{\"a}},
+	Author = {Mäntylä, Martti},
 	Date-Added = {2011-11-11 13:48:45 +0000},
 	Date-Modified = {2013-02-08 20:51:37 +0000},
 	Publisher = {Computer Science Press},
@@ -890,12 +947,12 @@
 	Year = {1988}}
 
 @incollection{g-mwds-91,
-	Author = {Andrew S. Glassner},
+	Author = {Glassner, Andrew S.},
 	Booktitle = {Graphics Gems {II}},
 	Chapter = {IV.6},
 	Date-Added = {2011-11-11 10:11:41 +0000},
 	Date-Modified = {2011-11-11 10:13:45 +0000},
-	Editor = {James Arvo},
+	Editor = {Arvo, James},
 	Pages = {191--201},
 	Publisher = {Academic Press},
 	Title = {Maintaining winged-edge data structures},
@@ -904,7 +961,7 @@
 @book{a-gg2-91,
 	Date-Added = {2011-11-11 10:07:48 +0000},
 	Date-Modified = {2013-02-08 20:51:18 +0000},
-	Editor = {James Arvo},
+	Editor = {Arvo, James},
 	Publisher = {Academic Press},
 	Read = {1},
 	Title = {Graphics Gems {II}},
@@ -912,7 +969,7 @@
 
 @book{c-p-97,
 	Address = {Cambridge},
-	Author = {Peter R. Cromwell},
+	Author = {Cromwell, Peter R.},
 	Date-Added = {2011-11-07 08:39:43 +0000},
 	Date-Modified = {2013-02-08 20:52:03 +0000},
 	Publisher = {Cambridge University Press},
@@ -921,7 +978,7 @@
 	Year = {1997}}
 
 @article{ci-tsc-84,
-	Author = {Bernard Chazelle and Janet Incerpi},
+	Author = {Chazelle, Bernard and Incerpi, Janet},
 	Date-Added = {2011-10-24 06:46:46 +0000},
 	Date-Modified = {2013-02-08 20:52:46 +0000},
 	Journal = {ACM Trans. Graph.},
@@ -934,7 +991,7 @@
 	Year = {1984}}
 
 @article{fm-tspep-84,
-	Author = {Alain Fournier and D. Y. Montuno},
+	Author = {Fournier, Alain and Montuno, D. Y.},
 	Date-Added = {2011-10-24 06:46:04 +0000},
 	Date-Modified = {2013-02-08 20:51:50 +0000},
 	Journal = {ACM Trans. Graph.},
@@ -948,7 +1005,7 @@
 
 @article{egs-laggw-10,
 	Arxiv = {0812.0893},
-	Author = {David Eppstein and Michael T. Goodrich and Darren Strash},
+	Author = {Eppstein, David and Goodrich, Michael T. and Strash, Darren},
 	Date-Added = {2011-10-24 06:33:05 +0000},
 	Date-Modified = {2013-02-08 20:52:00 +0000},
 	Journal = {SIAM J. Comput.},
@@ -960,7 +1017,7 @@
 	Year = {2010}}
 
 @inproceedings{b-oafsi-95,
-	Author = {Ivan J. Balaban},
+	Author = {Balaban, Ivan J.},
 	Booktitle = {Proc. 11th Ann. Symp. Comput. Geom.},
 	Date-Added = {2011-10-24 06:29:46 +0000},
 	Date-Modified = {2013-02-08 20:53:19 +0000},
@@ -970,7 +1027,7 @@
 	Year = {1995}}
 
 @article{b-carcg-81,
-	Author = {Kevin Q. Brown},
+	Author = {Brown, Kevin Q.},
 	Comments = {O(n) space},
 	Date-Added = {2011-10-21 13:45:46 +0000},
 	Date-Modified = {2013-02-08 20:52:57 +0000},
@@ -982,7 +1039,7 @@
 	Year = {1981}}
 
 @article{bo-arcgi-79,
-	Author = {Jon Louis Bentley and Thomas A. Ottmann},
+	Author = {Bentley, Jon Louis and Ottmann, Thomas A.},
 	Date-Added = {2011-10-21 13:41:00 +0000},
 	Date-Modified = {2013-02-08 20:53:13 +0000},
 	Journal = {IEEE Trans. Comput.},
@@ -994,7 +1051,7 @@
 	Year = {1979}}
 
 @article{cct-erpat-92,
-	Author = {Kenneth L. Clarkson and Richard Cole and Robert E. Tarjan},
+	Author = {Clarkson, Kenneth L. and Cole, Richard and Tarjan, Robert E.},
 	Date-Added = {2011-10-21 09:41:40 +0000},
 	Date-Modified = {2013-02-08 20:52:09 +0000},
 	Journal = {Internat. J. Comput. Geom. Appl.},
@@ -1006,7 +1063,7 @@
 	Year = {1992}}
 
 @article{cct-rpatd-92,
-	Author = {Kenneth L. Clarkson and Richard Cole and Robert E. Tarjan},
+	Author = {Clarkson, Kenneth L. and Cole, Richard and Tarjan, Robert E.},
 	Date-Added = {2011-10-21 09:40:29 +0000},
 	Date-Modified = {2013-02-08 20:52:08 +0000},
 	Journal = {Internat. J. Comput. Geom. Appl.},
@@ -1019,7 +1076,7 @@
 	Year = {1992}}
 
 @inproceedings{bms-dgc-94,
-	Author = {Christoph Burnikel and Kurt Mehlhorn and Stefan Schirra},
+	Author = {Burnikel, Christoph and Mehlhorn, Kurt and Schirra, Stefan},
 	Booktitle = {Proc. 5th ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2011-10-21 09:25:08 +0000},
 	Date-Modified = {2013-02-08 20:52:51 +0000},
@@ -1029,7 +1086,7 @@
 	Year = {1994}}
 
 @article{s-nmpgc-98,
-	Author = {Raimund Seidel},
+	Author = {Seidel, Raimund},
 	Date-Added = {2011-10-21 08:52:42 +0000},
 	Date-Modified = {2013-02-08 20:51:24 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -1042,7 +1099,7 @@
 @article{hs-parss-95,
 	Annote = {Special issue of selected papers from the
 4th Symposium on Discrete Algorithms.},
-	Author = {John Hershberger and Subhash Suri},
+	Author = {Hershberger, John and Suri, Subhash},
 	Date-Added = {2011-10-18 06:20:54 +0000},
 	Date-Modified = {2013-02-08 20:51:44 +0000},
 	Journal = {J. Algorithms},
@@ -1053,7 +1110,7 @@
 	Year = {1995}}
 
 @inproceedings{s-jttm-87,
-	Author = {Alan Saalfeld},
+	Author = {Saalfeld, Alan},
 	Booktitle = {Proc. 3rd Ann. Symp. Comput. Geom.},
 	Date-Added = {2011-09-27 10:03:39 +0000},
 	Date-Modified = {2013-02-08 20:51:26 +0000},
@@ -1063,7 +1120,7 @@
 	Year = {1987}}
 
 @inproceedings{s-dceat-89,
-	Author = {Alan Saalfeld},
+	Author = {Saalfeld, Alan},
 	Booktitle = {Abstracts 1st Canad. Conf. Comput. Geom.},
 	Date-Added = {2011-09-27 10:03:39 +0000},
 	Date-Modified = {2013-02-08 20:51:29 +0000},
@@ -1073,7 +1130,7 @@
 	Year = {1989}}
 
 @article{e-nlbhp-96,
-	Author = {Jeff Erickson},
+	Author = {Erickson, Jeff},
 	Date-Added = {2009-09-07 00:17:32 -0500},
 	Date-Modified = {2013-02-08 20:51:59 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -1084,7 +1141,7 @@
 	Year = 1996}
 
 @book{s-dasds-90,
-	Author = {Hanan Samet},
+	Author = {Samet, Hanan},
 	Date-Added = {2009-09-06 22:24:53 -0500},
 	Date-Modified = {2013-02-08 20:51:25 +0000},
 	Publisher = {Addison Wesley},
@@ -1093,7 +1150,7 @@
 	Year = {1990}}
 
 @article{e-ndrs-81,
-	Author = {Herbert Edelsbrunner},
+	Author = {Edelsbrunner, Herbert},
 	Date-Added = {2009-09-06 22:20:17 -0500},
 	Date-Modified = {2013-02-08 20:52:01 +0000},
 	Journal = {Bull. EATCS},
@@ -1104,7 +1161,7 @@
 	Year = {1981}}
 
 @article{bc-tdjc-94,
-	Author = {Reuven {Bar-Yehuda} and Bernard Chazelle},
+	Author = {{Bar-Yehuda}, Reuven and Chazelle, Bernard},
 	Date-Added = {2009-09-03 10:23:01 -0500},
 	Date-Modified = {2013-02-08 20:53:17 +0000},
 	Journal = {Int. J. Comput. Geom. Appl.},
@@ -1116,7 +1173,7 @@
 	Year = {1994}}
 
 @article{hs-oaesp-99,
-	Author = {John Hershberger and Subhash Suri},
+	Author = {Hershberger, John and Suri, Subhash},
 	Date-Added = {2009-08-27 07:12:36 -0500},
 	Date-Modified = {2013-02-08 20:51:42 +0000},
 	Journal = {SIAM J. Comput.},
@@ -1128,7 +1185,7 @@
 	Year = {1999}}
 
 @inproceedings{gs-pasph-98,
-	Author = {Dima Grigoriev and Anatol Slissenko},
+	Author = {Grigoriev, Dima and Slissenko, Anatol},
 	Booktitle = {Proc. Int. Symp. Symbolic Algebraic Comput.},
 	Date-Added = {2009-08-27 07:12:21 -0500},
 	Date-Modified = {2013-02-08 20:51:46 +0000},
@@ -1139,7 +1196,7 @@
 	Bdsk-Url-1 = {http://doi.acm.org/10.1145/281508.281528}}
 
 @inproceedings{c-tpca-82,
-	Author = {Bernard Chazelle},
+	Author = {Chazelle, Bernard},
 	Booktitle = {Proc. 23rd Ann. IEEE Symp. Found. Comput. Sci.},
 	Date-Added = {2009-08-27 07:11:51 -0500},
 	Date-Modified = {2013-02-08 20:52:11 +0000},
@@ -1150,7 +1207,7 @@
 	Year = {1982}}
 
 @article{lp-esppr-84,
-	Author = {Der-Tsai Lee and Franco P. Preparata},
+	Author = {Lee, Der-Tsai and Preparata, Franco P.},
 	Date-Added = {2009-08-27 07:11:40 -0500},
 	Date-Modified = {2013-02-08 20:51:38 +0000},
 	Journal = {Networks},
@@ -1162,7 +1219,7 @@
 	Year = {1984}}
 
 @article{d-rysoa-92,
-	Author = {Olivier Devillers},
+	Author = {Devillers, Olivier},
 	Date-Added = {2009-08-26 17:46:52 -0500},
 	Date-Modified = {2013-02-08 20:52:03 +0000},
 	Journal = {Int. J. Comput. Geom. Appl.},
@@ -1174,7 +1231,7 @@
 	Year = {1992}}
 
 @article{ctv-flvat-89,
-	Author = {Kenneth L. Clarkson and Robert E. Tarjan and Christopher J. Van Wyk},
+	Author = {Clarkson, Kenneth L. and Tarjan, Robert E. and Wyk, Christopher J. Van},
 	Date-Added = {2009-08-26 17:45:28 -0500},
 	Date-Modified = {2013-02-08 20:52:07 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -1185,7 +1242,7 @@
 	Year = {1989}}
 
 @article{s-sfira-91,
-	Author = {Raimund Seidel},
+	Author = {Seidel, Raimund},
 	Date-Added = {2009-08-26 17:43:39 -0500},
 	Date-Modified = {2013-02-08 20:51:23 +0000},
 	Journal = {Comput. Geom. Theory Appl.},
@@ -1197,7 +1254,7 @@
 	Year = {1991}}
 
 @article{c-tsplt-91,
-	Author = {Bernard Chazelle},
+	Author = {Chazelle, Bernard},
 	Date-Added = {2009-08-26 17:42:46 -0500},
 	Date-Modified = {2013-02-08 20:52:10 +0000},
 	Journal = {Discrete Comput. Geom.},
@@ -1209,7 +1266,7 @@
 	Year = {1991}}
 
 @article{agr-lttsp-01,
-	Author = {Nancy M. Amato and Michael T. Goodrich and Edgar Ramos},
+	Author = {Amato, Nancy M. and Goodrich, Michael T. and Ramos, Edgar},
 	Date-Added = {2009-08-26 17:39:26 -0500},
 	Date-Modified = {2013-02-08 20:53:21 +0000},
 	Journal = {Discrete Comput. Geom.},
