--- a/optimization.bib
+++ b/optimization.bib
@@ -2,12 +2,133 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2016-12-02 17:56:35 -0500 
+%% Created for Jeff Erickson at 2017-10-15 12:41:56 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{hp-lbdpp-02,
+	Author = {van der Holst, Hein and de Pina, Jos{\'{e}} Coelho},
+	Date-Added = {2017-10-13 11:41:24 +0000},
+	Date-Modified = {2017-10-13 11:41:59 +0000},
+	Doi = {10.1016/S0166-218X(01)00294-3},
+	Journal = {Discrete Appl. Math.},
+	Number = {1--3},
+	Pages = {251--261},
+	Title = {Length-bounded disjoint paths in planar graphs},
+	Volume = {120},
+	Year = {2002},
+	Bdsk-Url-1 = {https://doi.org/10.1016/S0166-218X(01)00294-3}}
+
+@article{j-nmmpo-62,
+	Author = {Jewell, William S.},
+	Date-Added = {2017-10-11 20:21:09 +0000},
+	Date-Modified = {2017-10-11 20:22:36 +0000},
+	Doi = {10.1287/opre.10.4.476},
+	Journal = {Oper. Res.},
+	Keywords = {successive shortest paths},
+	Number = {4},
+	Pages = {476--499},
+	Read = {1},
+	Title = {New Methods in Mathematical Programming: {O}ptimal Flow Through Networks with Gains},
+	Volume = {10},
+	Year = {1962},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1287/opre.10.4.476}}
+
+@article{ho-fafmd-94,
+	Author = {Hao, Jianxiu and Orlin, James B.},
+	Date-Added = {2017-10-08 20:48:19 +0000},
+	Date-Modified = {2017-10-08 20:51:32 +0000},
+	Doi = {10.1006/jagm.1994.1043},
+	Journal = {J. Algorithms},
+	Number = {3},
+	Pages = {424--446},
+	Title = {A faster algorithm for finding the minimum cut in a directed graph},
+	Volume = {17},
+	Year = {1994},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1006/jagm.1994.1043}}
+
+@inproceedings{hrw-lfpfe-17,
+	Arxiv = {1704.01254},
+	Author = {Henzinger, Monika and Rao, Satish and Wang, Di},
+	Booktitle = {Proceedings of the Twenty-Eighth Annual ACM-SIAM Symposium on Discrete Algorithms},
+	Date-Added = {2017-10-08 20:20:39 +0000},
+	Date-Modified = {2017-10-08 20:21:51 +0000},
+	Doi = {10.1137/1.9781611974782.125},
+	Pages = {1919--1938},
+	Read = {1},
+	Title = {Local Flow Partitioning for Faster Edge Connectivity},
+	Year = {2017},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1137/1.9781611974782.125}}
+
+@inproceedings{kt-dgmcs-15,
+	Arxiv = {1411.5123},
+	Author = {Kawarabayashi, Ken-ichi and Thorup, Mikkel},
+	Booktitle = {Proc. 47th Ann. ACM Symp. Theory Comput.},
+	Date-Added = {2017-10-08 20:18:11 +0000},
+	Date-Modified = {2017-10-08 20:23:15 +0000},
+	Doi = {10.1145/2746539.2746588},
+	Pages = {665--674},
+	Title = {Deterministic Global Minimum Cut of a Simple Graph in Near-Linear Time},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1145/2746539.2746588}}
+
+@article{bkmnw-msmsm-17,
+	Author = {Borradaile, Glencora and Klein, Philip N. and Mozes, Shay and Nussbaum, Yahav and Wulff-Nilsen, Christian},
+	Date-Added = {2017-10-08 19:53:43 +0000},
+	Date-Modified = {2017-10-08 19:54:18 +0000},
+	Doi = {10.1137/15M1042929},
+	Journal = {SIAM J. Comput.},
+	Number = {4},
+	Pages = {1280--1303},
+	Read = {1},
+	Title = {Multiple-Source Multiple-Sink Maximum Flow in Directed Planar Graphs in Near-Linear Time},
+	Volume = {46},
+	Year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1137/15M1042929}}
+
+@article{bv-scprw-04,
+	Author = {Bertsimas, Dimitris and Vempala, Santosh},
+	Date-Added = {2017-08-10 17:55:29 +0000},
+	Date-Modified = {2017-08-10 17:57:07 +0000},
+	Doi = {10.1145/1008731.1008733},
+	Journal = {J. ACM},
+	Keywords = {approximate centroid},
+	Number = {4},
+	Pages = {540--556},
+	Read = {1},
+	Title = {Solving convex programs by random walks},
+	Volume = {51},
+	Year = {2004},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1145/1008731.1008733}}
+
+@article{cm-spadc-93,
+	Author = {Cohen, Edith and Megiddo, Nimrod},
+	Date-Added = {2017-08-10 16:05:45 +0000},
+	Date-Modified = {2017-08-10 16:06:08 +0000},
+	Doi = {10.1145/153724.153727},
+	Journal = {J. Assoc. Comput. Mach.},
+	Keywords = {multidimensional parametric search},
+	Number = {4},
+	Pages = {791--830},
+	Read = {1},
+	Title = {Strongly polynomial-time and {NC} algorithms for detecting cycles in periodic graphs},
+	Volume = {40},
+	Year = {1993},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1145/153724.153727}}
+
+@inproceedings{ks-dcdgp-88,
+	Author = {Kosaraju, S. Rao and Sullivan, Gregory F.},
+	Booktitle = {Proc. 20th ACM Symp. Theory. Comput.},
+	Date-Added = {2017-08-10 15:54:10 +0000},
+	Date-Modified = {2017-08-10 15:55:58 +0000},
+	Doi = {10.1145/62212.62251},
+	Pages = {398--406},
+	Title = {Detecting cycles in dynamic graphs in polynomial time (preliminary version)},
+	Year = {1988},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1145/62212.62251}}
 
 @article{krt-fdmfa-94,
 	Author = {King, Valerie and Rao, Satish and Tarjan, Robert E.},
@@ -388,7 +509,8 @@
 @article{ce-focmf-13,
 	Author = {Chambers, Erin Wolf and Eppstein, David},
 	Date-Added = {2013-11-02 12:12:00 +0000},
-	Date-Modified = {2013-11-02 12:12:30 +0000},
+	Date-Modified = {2017-10-08 20:02:17 +0000},
+	Doi = {10.7155/jgaa.00291},
 	Journal = {J. Graph Algorithms Appl.},
 	Number = {3},
 	Pages = {201--220},
@@ -1083,28 +1205,31 @@
 	Year = {1990}}
 
 @techreport{bg-pdmnf-61,
-	Author = {Busaker, R. G. and Gowen, P. J.},
+	Author = {Busacker, Robert G. and Gowen, Paul J.},
 	Comments = {successive shortest paths},
 	Date-Added = {2013-07-04 12:17:46 +0000},
-	Date-Modified = {2013-07-04 12:19:21 +0000},
+	Date-Modified = {2017-10-11 20:34:35 +0000},
 	Institution = {Oper. Res. Office, Johns Hopkins U.},
-	Note = {Cited in \cite{amo-nftaa-93}},
-	Number = {15},
+	Month = {November},
+	Number = {ORO-TP-15},
 	Title = {A procedure for determining minimal-cost network flow patterns},
-	Type = {{ORO Tech. Rep.}},
-	Year = {1961}}
+	Type = {Technical Paper},
+	Url = {http://www.dtic.mil/docs/citations/AD0249662},
+	Year = {1960},
+	Bdsk-Url-1 = {http://www.dtic.mil/docs/citations/AD0249662}}
 
 @article{i-nmstn-60,
-	Author = {Iri, M.},
+	Author = {Iri, Masao},
 	Comments = {successive shortest paths},
 	Date-Added = {2013-07-04 12:16:39 +0000},
-	Date-Modified = {2013-07-04 12:19:29 +0000},
+	Date-Modified = {2017-10-11 20:30:43 +0000},
 	Journal = {J. Oper. Res. Soc. Japan},
-	Note = {Cited in \cite{amo-nftaa-93}},
 	Pages = {27--87},
 	Title = {A new method of solving transportation-network problems},
+	Url = {http://www.orsj.or.jp/~archive/menu/01_03.html},
 	Volume = {3},
-	Year = {1960}}
+	Year = {1960},
+	Bdsk-Url-1 = {http://www.orsj.or.jp/~archive/menu/01_03.html}}
 
 @techreport{j-oftn-58,
 	Author = {Jewell, William S.},
@@ -2746,11 +2871,12 @@
 
 @inproceedings{jv-ppfn-83,
 	Author = {Johnson, Donald B. and Venkatesan, Shankar M.},
-	Booktitle = {Proc. 24th Ann. Symp. Found. Comput. Sci.},
+	Booktitle = {Proc. 24th Ann. IEEE Symp. Found. Comput. Sci.},
 	Date-Added = {2008-11-16 21:45:48 -0600},
-	Date-Modified = {2013-07-22 16:19:02 +0000},
+	Date-Modified = {2017-10-08 00:20:27 +0000},
+	Doi = {10.1109/SFCS.1983.44},
 	Pages = {259--264},
-	Read = {0},
+	Read = {1},
 	Title = {Partition of planar flow networks (preliminary version)},
 	Year = {1983},
 	Bdsk-Url-1 = {http://doi.ieeecomputersociety.org/10.1109/SFCS.1983.44}}
@@ -2887,9 +3013,11 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @article{b-aancp-94,
 	Author = {Baker, Brenda S.},
 	Date-Added = {2008-11-09 23:15:39 -0600},
-	Date-Modified = {2008-11-09 23:16:25 -0600},
+	Date-Modified = {2017-10-15 17:41:54 +0000},
+	Doi = {10.1145/174644.174650},
 	Journal = {J. Assoc. Comput. Mach.},
 	Pages = {153--180},
+	Read = {1},
 	Title = {Approximation algorithms for {NP}-complete problesm on planar graphs},
 	Volume = {41},
 	Year = {1994}}
@@ -3346,18 +3474,6 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	Title = {Using separation algorithms in fixed dimension},
 	Volume = {13},
 	Year = {1992}}
-
-@article{cm-sptnc-93,
-	Author = {Cohen, Edith and Megiddo, Nimrod},
-	Date-Added = {2008-07-31 14:26:18 -0500},
-	Date-Modified = {2013-10-30 21:03:02 +0000},
-	Journal = {J. Assoc. Comput. Mach.},
-	Keywords = {multidimensional parametric search},
-	Number = {4},
-	Pages = {791--830},
-	Title = {Strongly polynomial-time and {NC} algorithms for detecting cycles in periodic graphs},
-	Volume = {40},
-	Year = {1993}}
 
 @incollection{cm-mcffd-93,
 	Author = {Cohen, Edith and Megiddo, Nimrod},
