--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,443 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2017-06-22 21:08:47 -0500 
+%% Created for Jeff Erickson at 2017-11-01 16:44:36 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{dl-cginc-17,
+	Arxiv = {1511.09327},
+	Author = {Despré, Vincent and Lazarus, Francis},
+	Booktitle = {Proc. 33rd Int. Symp. Comput. Geom.},
+	Date-Added = {2017-11-01 14:47:28 +0000},
+	Date-Modified = {2017-11-01 14:51:01 +0000},
+	Doi = {10.4230/LIPIcs.SoCG.2017.35},
+	Number = {77},
+	Pages = {35:1--35:15},
+	Series = {Leibniz Int. Proc. Informatics},
+	Title = {Computing the Geometric Intersection Number of Curves},
+	Year = {2017},
+	Bdsk-Url-1 = {http://dx.doi.org/10.4230/LIPIcs.SoCG.2017.35}}
+
+@article{ck-acscc-15,
+	Author = {Chas, Moira and Krongold, Fabiana},
+	Date-Added = {2017-11-01 14:42:35 +0000},
+	Date-Modified = {2017-11-01 14:43:28 +0000},
+	Doi = {10.1112/jtopol/jtv036},
+	Journal = {J. Topology},
+	Number = {1},
+	Pages = {91--104},
+	Title = {Algebraic characteriation of simple closed curves via {Turaev's} cobracket},
+	Volume = {9},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1112/jtopol/jtv036}}
+
+@article{ck-acscc-10,
+	Author = {Chas, Moira and Krongold, Fabiana},
+	Date-Added = {2017-11-01 14:31:14 +0000},
+	Date-Modified = {2017-11-01 14:33:15 +0000},
+	Doi = {10.1142/S1793525310000379},
+	Journal = {J. Topol. Anal.},
+	Keywords = {self-intersection, Goldman bracket},
+	Number = {3},
+	Pages = {395--417},
+	Title = {An algebraic characterization of simple closed curves on surfaces with boudnary},
+	Volume = {2},
+	Year = {2010},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1142/S1793525310000379}}
+
+@unpublished{mnnw-mdpgo-15,
+	Arxiv = {1512.02068},
+	Author = {Mozes, Shay and Nikolaev, Cyril and Nussbaum, Yahav and Weimann, Oren},
+	Date-Added = {2017-10-07 22:35:45 +0000},
+	Date-Modified = {2017-10-07 22:38:00 +0000},
+	Month = {February},
+	Note = {Preprint},
+	Read = {1},
+	Title = {Minimum Cut of Directed Planar Graphs in {$O(n\log\log n)$} Time},
+	Year = {2015}}
+
+@article{cw-prpmg-94,
+	Author = {Chaves, Nathalie and Weber, Claude},
+	Comments = {Not available online},
+	Date-Added = {2017-09-30 22:22:42 +0000},
+	Date-Modified = {2017-09-30 22:23:39 +0000},
+	Journal = {Expo. Math.},
+	Pages = {53--77},
+	Title = {Plombages de rubans et problème des mots de {Gauss}},
+	Volume = {12},
+	Year = {1994}}
+
+@article{ce-pp2-96,
+	Author = {Cairns, Grant and Elton, Daniel M.},
+	Date-Added = {2017-09-30 21:28:43 +0000},
+	Date-Modified = {2017-09-30 21:33:53 +0000},
+	Doi = {10.1142/S0218216596000102},
+	Journal = {J. Knot Theory Ramif.},
+	Keywords = {unsigned Gauss codes, even loops + even bigons + cocycle},
+	Number = {2},
+	Pages = {137--144},
+	Read = {1},
+	Title = {The Planarity Porblem {II}},
+	Volume = {5},
+	Year = {1996},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1142/S0218216596000102}}
+
+@article{hk-prga-92,
+	Author = {Hopcroft, John E. and Kahn, Peter J.},
+	Date-Added = {2017-09-13 14:32:16 +0000},
+	Date-Modified = {2017-09-13 14:36:35 +0000},
+	Doi = {10.1007/BF01758769},
+	Journal = {Algorithmica},
+	Keywords = {Maxwell-Cremona theorem},
+	Number = {1--6},
+	Pages = {339--380},
+	Read = {1},
+	Title = {A paradigm for robust geometric algorithms},
+	Volume = {7},
+	Year = {1992},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF01758769}}
+
+@article{h-evjb-66,
+	Author = {Hermes, Oswald},
+	Date-Added = {2017-09-12 20:46:18 +0000},
+	Date-Modified = {2017-09-12 20:51:44 +0000},
+	Doi = {10.1515/crll.1866.65.174},
+	Journal = {J. Reine Angew. Math.},
+	Number = {2},
+	Pages = {174--176},
+	Read = {1},
+	Title = {Erläuterung des vorstehenden {Jacobischen} {Bruchstücks}},
+	Url = {http://eudml.org/doc/147964},
+	Volume = {65},
+	Year = {1866},
+	Bdsk-Url-1 = {http://eudml.org/doc/147964},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1515/crll.1866.65.174}}
+
+@article{h-ajrbi-1866,
+	Author = {Hermes, Oswald},
+	Date-Added = {2017-09-12 20:43:43 +0000},
+	Date-Modified = {2017-09-12 20:46:30 +0000},
+	Doi = {10.1515/crll.1866.65.177},
+	Journal = {J. Reine Angew. Math.},
+	Number = {2},
+	Pages = {177--179},
+	Read = {1},
+	Title = {Ausdehnung der {Jacobischen} {Regel} zur {Bestimmung} des {Inhalts} der {Sternpolygone} für den {Fall} vielfacher {Punkte}},
+	Url = {http://eudml.org/doc/147965},
+	Volume = {65},
+	Year = {1866},
+	Bdsk-Url-1 = {http://eudml.org/doc/147965},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1515/crll.1866.65.177}}
+
+@article{j-rbis-1866,
+	Author = {Jacobi, Carl Gustav Jacob},
+	Date-Added = {2017-09-12 20:12:10 +0000},
+	Date-Modified = {2017-09-12 20:54:46 +0000},
+	Doi = {10.1515/crll.1866.65.173},
+	Journal = {J. Reine Angew. Math.},
+	Note = {{Bruchstück} aus den hinterlassenen {Papieren} von {C. G. J. Jacobi}, mitgetheilt durch {Herrn O. Hermes}},
+	Number = {2},
+	Pages = {173--174},
+	Read = {1},
+	Title = {Regel zur {Bestimmung} des {Inhalts} der {Sternpolygone}},
+	Url = {http://eudml.org/doc/147963},
+	Volume = {65},
+	Year = {1866},
+	Bdsk-Url-1 = {http://eudml.org/doc/147963},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1515/crll.1866.65.173}}
+
+@article{rt-gcphg-84,
+	Author = {Rosenstiehl, Pierre and Tarjan, Robert E.},
+	Date-Added = {2017-09-11 14:43:48 +0000},
+	Date-Modified = {2017-09-11 14:46:16 +0000},
+	Doi = {10.1016/0196-6774(84)90018-X},
+	Journal = {J. Algorithms},
+	Number = {3},
+	Pages = {375--390},
+	Read = {1},
+	Title = {Gauss codes, planar {Hamiltonian} graphs, and stack-sortable permutations},
+	Volume = {5},
+	Year = {1984},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/0196-6774(84)90018-X}}
+
+@article{d-ukt-36,
+	Author = {Dehn, Max},
+	Comments = {Gauss code planarity},
+	Date-Added = {2017-09-10 22:34:18 +0000},
+	Date-Modified = {2017-09-10 22:37:05 +0000},
+	Doi = {10.1007/BF02401740},
+	Journal = {Acta Math.},
+	Pages = {123--168},
+	Read = {1},
+	Title = {Über kombinatorishe {Topologie}},
+	Volume = {67},
+	Year = {1936},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF02401740}}
+
+@article{cr-ltm-01,
+	Author = {Crapo, Henry and Rosenstiehl, Pierre},
+	Date-Added = {2017-09-10 22:02:10 +0000},
+	Date-Modified = {2017-09-10 22:03:05 +0000},
+	Doi = {10.1016/S0012-365X(00)00248-X},
+	Journal = {Discrete Math.},
+	Number = {299--320},
+	Read = {1},
+	Title = {On lacets and their manifolds},
+	Volume = {1--3},
+	Year = {2001},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/S0012-365X(00)00248-X}}
+
+@article{t-w2tg-80,
+	Author = {Truemper, Klaus},
+	Date-Added = {2017-09-10 21:18:16 +0000},
+	Date-Modified = {2017-09-10 21:24:31 +0000},
+	Doi = {10.1002/jgt.3190040106},
+	Journal = {J. Graph Theory},
+	Number = {1},
+	Pages = {43--49},
+	Read = {1},
+	Title = {On {Whitney's} 2-isomorphism theorem for graphs},
+	Volume = {4},
+	Year = {1980},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1002/jgt.3190040106}}
+
+@article{w-2ig-33,
+	Author = {Whitney, Hassler},
+	Comments = {Not available online},
+	Date-Added = {2017-09-10 21:10:29 +0000},
+	Date-Modified = {2017-09-10 21:21:49 +0000},
+	Journal = {Amer. J. Math.},
+	Note = {CIted in \cite{t-w2tg-80}},
+	Pages = {245--254},
+	Title = {2-isomorphic graphs},
+	Volume = {55},
+	Year = {1933}}
+
+@article{p-trg-91,
+	Author = {Peterson, Julius},
+	Comments = {Yes "graphs" not "Graphen"},
+	Date-Added = {2017-09-10 20:43:09 +0000},
+	Date-Modified = {2017-09-10 20:44:30 +0000},
+	Doi = {10.1007/BF02392606},
+	Journal = {Acta Math.},
+	Pages = {193--220},
+	Title = {Die {Theorie} der regulären graphs},
+	Volume = {15},
+	Year = {1891},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF02392606}}
+
+@incollection{rt-csc-90,
+	Author = {Rademacher, Hans and Toeplitz, Otto},
+	Booktitle = {The Enjoyment of Mathematics: Selections from Mathematics for the Amateur},
+	Chapter = {10},
+	Date-Added = {2017-09-10 20:30:42 +0000},
+	Date-Modified = {2017-09-10 20:38:17 +0000},
+	Note = {Originally published by Princeton Univ. Press, 1957},
+	Pages = {61--66},
+	Publisher = {Dover Publ.},
+	Read = {1},
+	Title = {On closed self-intersecting curves},
+	Year = {1990}}
+
+@article{t-pm-68,
+	Author = {Treybig, Leon B.},
+	Date-Added = {2017-09-10 20:24:46 +0000},
+	Date-Modified = {2017-09-10 20:39:44 +0000},
+	Doi = {10.1090/S0002-9947-1968-0217790-X},
+	Journal = {Trans. Amer. Math. Soc.},
+	Pages = {248--253},
+	Read = {1},
+	Title = {Prime mappings},
+	Volume = {130},
+	Year = {1968},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1090/S0002-9947-1968-0217790-X}}
+
+@article{n-utpg-27,
+	Author = {Nagy, {Julius v. Sz.}},
+	Comments = {Gyula von Szőkefalvi Nagy},
+	Date-Added = {2017-09-10 20:10:07 +0000},
+	Date-Modified = {2017-09-12 04:00:15 +0000},
+	Doi = {10.1007/BF01475475},
+	Journal = {Math. Z.},
+	Number = {1},
+	Pages = {579--592},
+	Read = {1},
+	Title = {Über ein topologisches {Problem} von {Gauß}},
+	Volume = {26},
+	Year = {1927},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF01475475}}
+
+@incollection{t-ibulh-55,
+	Author = {Titus, Charles J.},
+	Booktitle = {Lectures on Functions of a Complex Variable},
+	Date-Added = {2017-09-10 20:01:49 +0000},
+	Date-Modified = {2017-09-10 21:22:28 +0000},
+	Editor = {Kaplan, Wilfred},
+	Keywords = {self-overlapping treelike curves},
+	Note = {Cited in \cite{f-ngrca-69}},
+	Publisher = {Univ. Mich. Press},
+	Title = {The image of the boundary under a local homeomorphism},
+	Year = {1955}}
+
+@article{f-ngrca-69,
+	Author = {Francis, George K.},
+	Date-Added = {2017-09-10 19:51:11 +0000},
+	Date-Modified = {2017-09-10 19:55:41 +0000},
+	Doi = {10.1016/S0021-9800(69)80060-8},
+	Journal = {J. Comb. Theory},
+	Number = {4},
+	Pages = {331--341},
+	Read = {1},
+	Title = {Null genus realizability criterion for abstract intersection sequences},
+	Volume = {7},
+	Year = {1969},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/S0021-9800(69)80060-8}}
+
+@phdthesis{s-itd-88,
+	Author = {Scharein, Robert G.},
+	Date-Added = {2017-09-09 17:37:42 +0000},
+	Date-Modified = {2017-09-09 17:38:53 +0000},
+	Month = {March},
+	Read = {1},
+	School = {Department of Computer Science, The University of British Columbia},
+	Title = {Interactive Topological Drawing},
+	Url = {http://www.knotplot.com/thesis/},
+	Year = {1988},
+	Bdsk-Url-1 = {http://www.knotplot.com/thesis/}}
+
+@article{dt-ckp-83,
+	Author = {Dowker, Clifford H. and Thistlethwaite, Morwen B.},
+	Date-Added = {2017-09-07 21:59:33 +0000},
+	Date-Modified = {2017-09-07 22:01:42 +0000},
+	Doi = {10.1016/0166-8641(83)90004-4},
+	Journal = {Topology Appl.},
+	Keywords = {Dowker notation (equivalent to Gauss codes)},
+	Number = {1},
+	Pages = {19--31},
+	Read = {1},
+	Title = {Classification of knot projections},
+	Volume = {16},
+	Year = {1983},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/0166-8641(83)90004-4}}
+
+@article{k-vkt-99,
+	Arxiv = {math/9811028},
+	Author = {Kauffman, Louis H.},
+	Comments = {Gauss code planarity},
+	Date-Added = {2017-09-07 14:47:13 +0000},
+	Date-Modified = {2017-09-07 14:51:02 +0000},
+	Doi = {10.1006/eujc.1999.0314},
+	Journal = {Europ. J. Combin.},
+	Number = {7},
+	Pages = {663--691},
+	Read = {1},
+	Title = {Virtual Knot Theory},
+	Volume = {20},
+	Year = {1999},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1006/eujc.1999.0314}}
+
+@article{f-qpcf-06,
+	Author = {Fréchet, Maurice},
+	Comments = {Thèse de doctorat},
+	Date-Added = {2017-09-06 14:29:59 +0000},
+	Date-Modified = {2017-09-06 21:58:47 +0000},
+	Doi = {10.1007/BF03018603},
+	Journal = {Rendiconti del Circolo Matematico di Palermo},
+	Keywords = {Fréchet distance (écart = gap)},
+	Number = {1},
+	Pages = {1--72},
+	Title = {Sur quelques points de calcul fonctionnel},
+	Volume = {22},
+	Year = {1906},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF03018603}}
+
+@article{w-rfc-33,
+	Author = {Whitney, Hassler},
+	Comments = {An infinite family of disjoint simple curves is regular if (it acts like the streamlines of a flow, more or less)},
+	Date-Added = {2017-09-06 14:08:28 +0000},
+	Date-Modified = {2017-09-06 14:17:14 +0000},
+	Doi = {10.2307/1968202},
+	Journal = {Ann. Math.},
+	Number = {2},
+	Pages = {244--270},
+	Read = {1},
+	Title = {Regular families of curves},
+	Volume = {34},
+	Year = {1933},
+	Bdsk-Url-1 = {http://dx.doi.org/10.2307/1968202}}
+
+@inproceedings{s-epgg-90,
+	Author = {Schnyder, Walter},
+	Booktitle = {Proc. 1st Ann. ACM-SIAM Symp. Discrete Algorithms},
+	Comments = {http://dl.acm.org/citation.cfm?id=320176.320191 [no DOI]},
+	Date-Added = {2017-09-01 23:56:40 +0000},
+	Date-Modified = {2017-09-02 00:06:08 +0000},
+	Keywords = {Schynder wood},
+	Pages = {138--148},
+	Read = {1},
+	Title = {Embedding planar graphs on the grid},
+	Year = {1990}}
+
+@article{s-pgpd-89,
+	Author = {Schnyder, Walter},
+	Date-Added = {2017-09-01 23:55:10 +0000},
+	Date-Modified = {2017-09-01 23:56:32 +0000},
+	Doi = {10.1007/BF00353652},
+	Journal = {Order},
+	Keywords = {Schynder wood},
+	Number = {4},
+	Pages = {323--343},
+	Read = {1},
+	Title = {Planar graphs and poset dimension},
+	Volume = {5},
+	Year = {1989},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF00353652}}
+
+@article{hw-mcppg-95,
+	Author = {Höfting, Franz and Wanke, Egon},
+	Comments = {Generalizes shortest homotopic paths in torus graphs;},
+	Date-Added = {2017-08-08 17:01:04 +0000},
+	Date-Modified = {2017-08-08 17:11:18 +0000},
+	Journal = {SIAM J. Comput.},
+	Number = {5},
+	Pages = {1051--1067},
+	Title = {Minimum cost paths in periodic graphs},
+	Volume = {24},
+	Year = {1995}}
+
+@article{c-spg-78,
+	Author = {Collatz, Lothar},
+	Date-Added = {2017-08-08 16:54:25 +0000},
+	Date-Modified = {2017-08-08 17:01:02 +0000},
+	Doi = {10.1007/BF03322926},
+	Journal = {Resultate Math.},
+	Keywords = {graph spectrum},
+	Number = {1--2},
+	Pages = {42--53},
+	Read = {1},
+	Title = {Spektren periodischer {Graphen}},
+	Volume = {1},
+	Year = {1978},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF03322926}}
+
+@article{b-uam-11,
+	Author = {Brouwer, Luitzen E. J.},
+	Comments = {degree of map = homotopy invariant},
+	Date-Added = {2017-06-27 16:58:34 +0000},
+	Date-Modified = {2017-06-27 17:01:45 +0000},
+	Doi = {10.1007/BF01456931},
+	Journal = {Math. Ann.},
+	Number = {1},
+	Pages = {97--115},
+	Read = {1},
+	Title = {Über {Abbildung} von {Mannigfaltigkeiten}},
+	Volume = {71},
+	Year = {1911},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF01456931}}
 
 @article{d-pe-75,
 	Author = {Dweighter, Harry},
@@ -374,7 +805,8 @@
 @article{m-smcc-94,
 	Author = {Minc, Piotr},
 	Comments = {define derivative of a polygonal path},
-	Journal = {Topology and its Applications},
+	Date-Modified = {2017-09-07 22:00:12 +0000},
+	Journal = {Topology Appl.},
 	Number = {1},
 	Pages = {1--21},
 	Publisher = {Elsevier},
@@ -1164,13 +1596,15 @@
 @article{kzs-ngg-95,
 	Author = {Kennedy, John W. and Zervatius, Brigitte and Servatius, Herman},
 	Date-Added = {2015-09-07 20:28:08 +0000},
-	Date-Modified = {2015-09-07 20:28:53 +0000},
+	Date-Modified = {2017-09-10 21:10:28 +0000},
 	Journal = {Congr. Numer.},
 	Pages = {112--117},
 	Read = {1},
 	Title = {A note on {Gaussian} graphs},
+	Url = {https://users.wpi.edu/~bservat/gaussian.html},
 	Volume = {112},
-	Year = {1995}}
+	Year = {1995},
+	Bdsk-Url-1 = {https://users.wpi.edu/~bservat/gaussian.html}}
 
 @article{gk-ggd-94,
 	Author = {Gargano, Michael L. and Kennedy, John W.},
@@ -2887,7 +3321,8 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 @article{t-cotdp-68,
 	Author = {Treybig, Leon B.},
 	Date-Added = {2014-10-02 00:39:01 +0000},
-	Date-Modified = {2014-10-02 00:39:53 +0000},
+	Date-Modified = {2017-09-10 20:40:20 +0000},
+	Doi = {10.1090/S0002-9947-1968-0217789-3},
 	Journal = {Trans. Amer. Math. Soc.},
 	Pages = {223--247},
 	Read = {1},
@@ -3174,9 +3609,9 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 	Year = {1999}}
 
 @article{for-ttp-06,
-	Author = {de Fraysseix, Hubert and {Ossona de Mendez}, Patrice and Rosentiehl, Pierre},
+	Author = {de Fraysseix, Hubert and {Ossona de Mendez}, Patrice and Rosenstiehl, Pierre},
 	Date-Added = {2014-07-20 15:07:02 +0000},
-	Date-Modified = {2014-07-20 15:07:02 +0000},
+	Date-Modified = {2017-09-11 14:44:25 +0000},
 	Journal = {Int. J. Found. Comput. Sci.},
 	Number = {5},
 	Pages = {1017--1030},
@@ -3788,8 +4223,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Author = {Sider, Neil N.},
 	Comments = {Any $n$-vertex surface triangulation has a nonseparating cycle of length $\sqrt{n}$; incomplete proof},
 	Date-Added = {2013-03-28 17:58:24 +0000},
-	Date-Modified = {2013-03-28 18:00:06 +0000},
-	Note = {Cited in \cite{ah-irg-78}.},
+	Date-Modified = {2017-09-10 21:22:36 +0000},
+	Note = {Cited in \cite{ah-irg-78}},
 	School = {Syracuse Univ.},
 	Title = {Partial colorings and limiting chromatics numbers},
 	Year = {1971}}
@@ -4626,11 +5061,12 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Author = {Lazarus, Francis and Rivaud, Julien},
 	Booktitle = {Proc. 53rd Ann. IEEE Symp. Foundations Comput. Sci.},
 	Date-Added = {2012-07-02 22:03:26 +0000},
-	Date-Modified = {2012-07-02 22:07:22 +0000},
+	Date-Modified = {2017-11-01 21:44:33 +0000},
 	Howpublished = {Preprint},
+	Pages = {440--449},
 	Read = {1},
 	Title = {On the homotopy test on surfaces},
-	Year = {to appear, 2012}}
+	Year = {2012}}
 
 @article{ce-tnpcs-10,
 	Author = {{Colin de Verdière}, Éric and Erickson, Jeff},
@@ -4891,9 +5327,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @article{gkz-amnip-05,
 	Author = {Gonçalves, Daciberg L. and Kudryavtseva, Elena and Zieschang, Heiner},
-	Comments = {can't find online; probaby in Russian},
+	Comments = {can't find online},
 	Date-Added = {2012-06-20 16:08:18 +0000},
-	Date-Modified = {2012-06-20 20:26:57 +0000},
+	Date-Modified = {2017-11-01 15:01:27 +0000},
 	Journal = {Proc. Seminar on Vector and Tensor Analysis},
 	Number = {139--167},
 	Title = {An algorithm for minimal number of intersection points of curves on surfaces},
@@ -5256,18 +5692,21 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Year = {1975}}
 
 @incollection{rr-petg-78,
-	Author = {Rosenthiel, Pierre and Read, Ronald C.},
+	Author = {Rosenstiehl, Pierre and Read, Ronald C.},
 	Booktitle = {Advances in Graph Theory},
 	Date-Added = {2012-05-20 19:42:14 +0000},
-	Date-Modified = {2012-05-20 19:47:35 +0000},
+	Date-Modified = {2017-09-30 21:34:39 +0000},
+	Doi = {10.1016/S0167-5060(08)70508-9},
 	Editor = {Bollobás, Béla},
-	Keywords = {cycle space, cocycle space, bicycles},
+	Keywords = {cycle space, cocycle space, bicycles, even loops + even bigons + cocycle},
 	Number = {3},
 	Pages = {195--226},
 	Publisher = {North-Holland},
+	Read = {1},
 	Series = {Ann. Discrete Math.},
 	Title = {On the principal edge tripartition of a graph},
-	Year = {1978}}
+	Year = {1978},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/S0167-5060(08)70508-9}}
 
 @article{rs-lpp-84,
 	Author = {Richter, R. Bruce and Shank, Herbert},
@@ -7356,8 +7795,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Author = {Pont, Jean-Claude},
 	Comments = {Möbius strip due to Gauss},
 	Date-Added = {2012-03-05 17:59:21 +0000},
-	Date-Modified = {2012-03-05 18:05:34 +0000},
-	Note = {Cited in \cite{hj-ta-09}.},
+	Date-Modified = {2017-09-10 21:22:41 +0000},
+	Note = {Cited in \cite{hj-ta-09}},
 	Publisher = {Presses Universitaire de France},
 	Series = {Bibliothèque de Philosophie contemporaine},
 	Title = {La topologie algébrique: des origines à Poincaré},
@@ -7425,10 +7864,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{j-yodawg-04,
 	Author = {Joiner, Alvin N. ''Xzibit''},
 	Date-Added = {2012-03-01 15:58:17 +0000},
-	Date-Modified = {2012-05-08 09:01:06 +0000},
+	Date-Modified = {2017-09-10 21:23:01 +0000},
 	Journal = {Pimp My Ride},
 	Keywords = {recursion},
-	Note = {Cited in~\cite{j-yodawg-04}.},
+	Note = {Cited in~\cite{j-yodawg-04}},
 	Read = {1},
 	Title = {Yo dawg, {I} herd you liked self-references},
 	Volume = {1--6},
@@ -7496,8 +7935,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @phdthesis{l-gm-80,
 	Author = {Lins, Sóstenes},
 	Date-Added = {2012-02-29 20:48:59 +0000},
-	Date-Modified = {2012-02-29 20:50:15 +0000},
-	Note = {Cited in \cite{l-gem-82}.},
+	Date-Modified = {2017-09-10 21:22:46 +0000},
+	Note = {Cited in \cite{l-gem-82}},
 	School = {Univ. Waterloo},
 	Title = {Graphs of Maps},
 	Type = {{Ph.D.} thesis},
@@ -7815,10 +8254,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Year = {1860}}
 
 @article{f-tm-1854,
-	Author = {likely Francis Guthrie], ``F. G.'' [most},
+	Author = {Guthrie?], {“F. G.” [Francis}},
 	Comments = {four-color theorem},
 	Date-Added = {2012-02-21 14:35:35 +0000},
-	Date-Modified = {2012-03-16 08:55:26 +0000},
+	Date-Modified = {2017-09-10 19:45:23 +0000},
 	Journal = {The Athenæum},
 	Month = {June 10,},
 	Note = {Cited in \cite{m-nhfc-12}},
@@ -10176,8 +10615,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @mastersthesis{l-tspp-03,
 	Author = {Lennes, Nels Johann},
 	Date-Added = {2011-11-17 21:42:48 +0000},
-	Date-Modified = {2011-12-14 16:25:14 +0000},
-	Note = {Cited in \cite{v-tpcna-05}.},
+	Date-Modified = {2017-09-10 21:22:52 +0000},
+	Note = {Cited in \cite{v-tpcna-05}},
 	Read = {0},
 	School = {Univ. Chicago},
 	Title = {Theorems on the Simple Polygon and Polyhedron},
@@ -10424,16 +10863,16 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Volume = {37},
 	Year = {2010}}
 
-@book{k-oapg-11,
-	Author = {Klein, Philip N.},
+@book{km-oapg-14,
+	Author = {Klein, Philip N. and Mozes, Shay},
 	Date-Added = {2011-11-02 04:29:27 +0000},
-	Date-Modified = {2013-03-12 14:47:19 +0000},
+	Date-Modified = {2017-09-02 00:16:50 +0000},
 	Publisher = {Unpublished textbook draft},
 	Read = {1},
 	Title = {Optimization Algorithms for Planar Graphs},
 	Url = {http://planarity.org/},
-	Year = {2012},
-	Bdsk-Url-1 = {http://flatworlds.org}}
+	Year = {2014},
+	Bdsk-Url-1 = {http://planarity.org/}}
 
 @article{s-cm-51,
 	Author = {Stein, Sherman K.},
@@ -13116,7 +13555,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{cf-mcngh-10,
 	Author = {Chen, Chao and Freedman, Daniel},
 	Date-Added = {2010-07-05 18:38:19 -0500},
-	Date-Modified = {2011-12-22 21:20:45 +0000},
+	Date-Modified = {2017-10-06 18:08:56 +0000},
+	Doi = {10.1016/j.comgeo.2009.06.004},
 	Journal = {Comput. Geom. Theory Appl.},
 	Number = {2},
 	Pages = {169--181},
@@ -13124,18 +13564,19 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Title = {Measuring and computing natural generators for homology groups},
 	Volume = {43},
 	Year = {2010},
-	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/B6TYS-4WK488C-1/2/cfaf5d73b7a56ec25da4bc839bc16575},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.comgeo.2009.06.004}}
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.comgeo.2009.06.004}}
 
 @inproceedings{cf-hrhl-10,
 	Author = {Chen, Chao and Freedman, Daniel},
 	Booktitle = {Proc. 21st Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2010-07-05 18:26:06 -0500},
-	Date-Modified = {2011-12-22 21:20:44 +0000},
+	Date-Modified = {2017-10-06 18:08:04 +0000},
+	Doi = {10.1137/1.9781611973075.129},
 	Pages = {1594--1604},
 	Read = {1},
 	Title = {Hardness results for homology localization},
-	Year = {2010}}
+	Year = {2010},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1137/1.9781611973075.129}}
 
 @inproceedings{dhk-ohctu-10,
 	Author = {Dey, Tamal K. and Hirani, Anil N. and Krishnamoorthy, Bala},
@@ -14651,8 +15092,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @article{mst-ipmas-00,
 	Author = {Miyazaki, Masamichi and Shinohara, Ayumi and Takeda, Masayuki},
+	Comments = {Inaccessible full version of CPM 1997 conference paper},
 	Date-Added = {2009-11-01 18:14:59 -0600},
-	Date-Modified = {2011-07-06 22:21:50 -0500},
+	Date-Modified = {2017-09-13 14:32:12 +0000},
 	Journal = {J. Discrete Algorithms [Hermes]},
 	Number = {1},
 	Pages = {187--204},
@@ -15975,16 +16417,18 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Year = {1992}}
 
 @article{fw-czp-99,
-	Author = {Francis, George and Weeks, Jeff},
+	Author = {Francis, George K. and Weeks, Jeff},
 	Date-Added = {2009-09-18 13:45:45 -0500},
-	Date-Modified = {2011-12-14 16:22:47 +0000},
+	Date-Modified = {2017-09-10 19:44:04 +0000},
+	Doi = {10.2307/2589143},
 	Journal = {Amer. Math. Monthly},
 	Number = {5},
 	Pages = {393--399},
 	Read = {1},
 	Title = {Conway's {ZIP} proof},
 	Volume = {106},
-	Year = {1999}}
+	Year = {1999},
+	Bdsk-Url-1 = {http://dx.doi.org/10.2307/2589143}}
 
 @article{d-bas1a-1888,
 	Author = {Dyck, Walther},
@@ -16949,18 +17393,18 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Title = {Topological graph theory},
 	Year = {1987}}
 
-@incollection{e-19pef-05,
+@incollection{e-20pef-13,
 	Author = {Eppstein, David},
 	Booktitle = {The Geometry Junkyard},
 	Date-Added = {2008-09-28 15:00:26 -0500},
-	Date-Modified = {2012-05-08 09:08:03 +0000},
+	Date-Modified = {2017-09-05 11:59:03 +0000},
 	Keywords = {graphs},
-	Month = {October},
-	Note = {Last accessed May 10, 2012.},
+	Month = {January},
+	Note = {Last accessed September 5, 2017.},
 	Read = {1},
-	Title = {Nineteen Proofs of {Euler's} Formula: {$V-E+F=2$}},
+	Title = {Twenty Proofs of {Euler's} Formula: {$V-E+F=2$}},
 	Url = {http://www.ics.uci.edu/~eppstein/junkyard/euler/},
-	Year = {2005},
+	Year = {2013},
 	Bdsk-Url-1 = {http://www.ics.uci.edu/~eppstein/junkyard/euler/}}
 
 @book{r-mct-74,
@@ -17002,19 +17446,18 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Arxiv = {0709.2512v2},
 	Author = {Chen, Chao and Freedman, Daniel},
 	Date-Added = {2008-07-14 21:32:28 -0500},
-	Date-Modified = {2012-05-06 20:23:59 +0000},
+	Date-Modified = {2017-10-06 18:06:59 +0000},
 	Howpublished = {Preprint},
 	Read = {1},
 	Title = {Quantifying Homology Classes {II}: {L}ocalization and Stability},
-	Url = {http://arxiv.org/abs/0709.2512v2},
-	Year = {2007},
-	Bdsk-Url-1 = {http://arxiv.org/abs/0709.2512v2}}
+	Year = {2007}}
 
 @inproceedings{cf-qhc-08,
 	Author = {Chen, Chao and Freedman, Daniel},
 	Booktitle = {Proc. 25th Ann. Symp. Theoretical Aspects Comput. Sci.},
 	Date-Added = {2008-07-14 21:27:38 -0500},
-	Date-Modified = {2012-05-06 20:19:05 +0000},
+	Date-Modified = {2017-10-06 18:07:23 +0000},
+	Doi = {10.4230/LIPIcs.STACS.2008.1343},
 	Number = {08001},
 	Pages = {169--180},
 	Read = {1},
