--- a/lowerbounds.bib
+++ b/lowerbounds.bib
@@ -2,15 +2,39 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2013-11-03 16:10:25 -0600 
+%% Created for Jeff Erickson at 2017-09-22 10:12:21 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@inproceedings{kpp-hlb3c-16,
+	Arxiv = {1407.6756},
+	Author = {Kopelowitz, Tsvi and Pettie, Seth and Porat, Ely},
+	Booktitle = {Proc 27th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	Date-Added = {2017-09-22 01:09:43 +0000},
+	Date-Modified = {2017-09-22 01:11:44 +0000},
+	Doi = {10.1137/1.9781611974331.ch89},
+	Pages = {1272--1287},
+	Read = {1},
+	Title = {Higher Lower Bounds from the {3SUM} Conjecture},
+	Year = {2016}}
+
+@inproceedings{p-tplbd-10,
+	Author = {Pătrașcu, Mihai},
+	Booktitle = {Proc. 42nd Ann. ACM Symp. Theory Comput.},
+	Date-Added = {2017-09-22 01:09:10 +0000},
+	Date-Modified = {2017-09-22 01:09:10 +0000},
+	Doi = {10.1145/1806689.1806772},
+	Pages = {603--610},
+	Read = {1},
+	Title = {Towards Polynomial Lower Bounds for Dynamic Problems},
+	Year = {2010},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1145/1806689.1806772}}
+
 @article{sy-lbadt-82,
-	Author = {J. Michael Steele and Andrew Chi-Chih Yao},
+	Author = {Steele, J. Michael and Yao, Andrew Chi-Chih},
 	Date-Added = {2013-11-03 22:08:03 +0000},
 	Date-Modified = {2013-11-03 22:10:25 +0000},
 	Journal = {J. Algorithms},
@@ -20,7 +44,7 @@
 	Year = {1982}}
 
 @inproceedings{b-lbact-83,
-	Author = {Michael Ben-Or},
+	Author = {Ben-Or, Michael},
 	Booktitle = {Proc. 15th Annu. ACM Sympos. Theory Comput.},
 	Date-Added = {2013-11-03 22:07:29 +0000},
 	Date-Modified = {2013-11-03 22:07:41 +0000},
@@ -29,7 +53,7 @@
 	Year = {1983}}
 
 @article{dl-ccvsp-79,
-	Author = {David P. Dobkin and Richard J. Lipton},
+	Author = {Dobkin, David P. and Lipton, Richard J.},
 	Date-Added = {2009-07-24 13:31:49 -0500},
 	Date-Modified = {2009-07-24 13:32:36 -0500},
 	Journal = {J. Comput. Syst. Sci.},
@@ -39,7 +63,7 @@
 	Year = {1979}}
 
 @article{s-clfch-82,
-	Author = {Marc Snir},
+	Author = {Snir, Marc},
 	Date-Added = {2009-07-24 13:30:15 -0500},
 	Date-Modified = {2009-07-24 13:30:58 -0500},
 	Journal = {Theoret. Comput. Sci.},
@@ -49,7 +73,7 @@
 	Year = {1982}}
 
 @article{r-psplf-72,
-	Author = {Michael O. Rabin},
+	Author = {Rabin, Michael O.},
 	Date-Added = {2009-07-24 13:27:05 -0500},
 	Date-Modified = {2009-07-24 13:27:51 -0500},
 	Journal = {J. Comput. Syst. Sci.},
@@ -59,7 +83,7 @@
 	Year = {1972}}
 
 @article{v-pcp-75,
-	Author = {Leslie Valiant},
+	Author = {Valiant, Leslie},
 	Date-Added = {2009-07-24 13:12:27 -0500},
 	Date-Modified = {2009-07-24 13:12:27 -0500},
 	Journal = {SIAM J. Comput.},
@@ -69,7 +93,7 @@
 	Year = {1975}}
 
 @inproceedings{yar-olbsp-77,
-	Author = {Andrew C. Yao and David M. Avis and Ronald L. Rivest},
+	Author = {Yao, Andrew C. and Avis, David M. and Rivest, Ronald L.},
 	Booktitle = {Proc. 9th Ann. ACM Symp. Theory Ccomput.},
 	Date-Added = {2009-07-24 13:10:26 -0500},
 	Date-Modified = {2009-07-24 13:11:40 -0500},
@@ -79,7 +103,7 @@
 	Bdsk-Url-1 = {http://doi.acm.org/10.1145/800105.803391}}
 
 @inproceedings{y-ccplf-75,
-	Author = {Andrew Chi-Chih Yao},
+	Author = {Yao, Andrew Chi-Chih},
 	Booktitle = {Proc. 16th IEEE Ann. Symp. Foundations Comput. Sci.},
 	Date-Added = {2009-07-24 13:05:46 -0500},
 	Date-Modified = {2009-07-24 13:07:51 -0500},
